Fix issue where collapsible menu is hidden by collapsible content lower on the page

--- a/css/style.css
+++ b/css/style.css
@@ -519,6 +519,10 @@ footer .row .span3:last-child {
     margin: inherit;
 }
 
+.navbar-fixed-top .nav-collapse {
+    z-index: 2;
+}
+
 .topic-page-logo {
     float: left;
     display: inline-block;
